--- a/assets/stylesheets/components/banner.css
+++ b/assets/stylesheets/components/banner.css
@@ -22,12 +22,16 @@
 
 .centered-container h1 {
   font-family: "Gill Sans", sans-serif;
-  font-size: 64px;
+  font-size: 56px;
   margin: 0;
 }
 
 .centered-container h2 {
   font-family: "Gill Sans", sans-serif;
-  font-size: 36px;
+  font-size: 32px;
   margin: 0;
+}
+
+.project-container {
+  display: flex
 }
