--- a/assets/stylesheets/components/avatar.css
+++ b/assets/stylesheets/components/avatar.css
@@ -1,6 +1,8 @@
 .avatar {
-  height: 257px;
-  width: 257px;
+  height: 200px;
+  width: 200px;
   border-radius: 50%;
   margin-right: 24px;
+  object-fit: cover;
+  object-position: 50% 21%;
 }
