--- a/assets/stylesheets/components/banner.css
+++ b/assets/stylesheets/components/banner.css
@@ -13,6 +13,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 24px;
+  /* background: green; */
+}
+
+#left {
+  align-items: flex-start;
 }
 
 .centered-contents {
@@ -24,7 +30,7 @@
   font-family: "Gill Sans", sans-serif;
   font-size: 56px;
   margin: 0;
-  color: white;
+  /* color: white; */
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   text-align: left;
   font-weight: 600;
@@ -34,6 +40,11 @@
   font-size: 32px;
   font-weight: 300;
 }
+
+.about-content p {
+  margin: 0;
+}
+
 
 .project{
   /* background-color: aqua; */
