--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -25,6 +25,14 @@ img {
     vertical-align: middle;
     border-style: none;
 }
+
+p {
+  font-family: "Montserrat", "Helvetica", "sans-serif";
+}
+
+h1, h2, h3, h4, h5 {
+  font-family: 'Patua One', cursive;
+}
 /* .project-container {
   background-image: linear-gradient(180deg, #78a6e8 40%, #deb285 90%, #d8b492 110%);
 } */
