--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -28,10 +28,12 @@ img {
 
 p {
   font-family: "Montserrat", "Helvetica", "sans-serif";
+  /* font-size: 15px; */
 }
 
 h1, h2, h3, h4, h5 {
-  font-family: 'Patua One', cursive;
+  font-family: 'Red Hat Display', sans-serif;
+  /* font-family: 'Patua One', cursive; */
 }
 /* .project-container {
   background-image: linear-gradient(180deg, #78a6e8 40%, #deb285 90%, #d8b492 110%);
