--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -1,6 +1,5 @@
 @import url(components/banner.css);
 @import url(components/avatar.css);
-@import url(components/footer.css);
 @import url(components/button.css);
 
 body {
@@ -8,8 +7,12 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  background-color: #F4F4F4;
+  /* background-color: #9DC88D; */
   /* background-image: linear-gradient(180deg, #78a6e8 40%, #deb285 90%, #d8b492 110%); */
+  background-image: url(../images/background.jpeg);
+  background-repeat: round;
+  /* background-position: top; */
+  background-attachment: fixed;
 }
 
 a {
@@ -21,13 +24,14 @@ a:hover {
   color: white;
 }
 
-img {
-    vertical-align: middle;
-    border-style: none;
-}
+/* img {
+  vertical-align: middle;
+  border-style: none;
+} */
 
 p {
   font-family: "Montserrat", "Helvetica", "sans-serif";
+  margin: 8px;
   /* font-size: 15px; */
 }
 
