--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -16,8 +16,21 @@ p {
   margin: 8px;
 }
 
+h3 {
+  font-size: 36px;
+}
+
 h1, h2, h3, h4, h5 {
   font-family: 'Red Hat Display', sans-serif;
+}
+
+a {
+  text-decoration: none;
+  cursor: pointer;
+}
+
+a:hover {
+  color: white;
 }
 
 /* || Page setup */
