--- a/assets/stylesheets/components/button.css
+++ b/assets/stylesheets/components/button.css
@@ -2,7 +2,7 @@
   font-size: 16px;
   color: #FFFFFF;
   padding: 8px 16px;
-  border: 1px solid #FFFFFF;
+  /* border: 1px solid #1F5F51; */
   border-radius: 5px;
   transition: .5s ease-in-out;
   background: #33a58a;
