--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -74,7 +74,9 @@ a:hover {
   .centered-contents {
     flex-wrap: wrap;
   }
+}
 
+@media screen and (max-width: 1200px) {
   #start {
     order: -1;
   }
